@@ -3,6 +3,7 @@
 	* Removed some unnecessary inclusions of input.h.
 	* Removed unnecessary inclusion of main.h from eval.c.
 	* Generalise setinputfile for use in read_profile/readcmdfile.
+	* Handle SKIPEVAL in read_profile by exiting.
 
 2005-03-25  Gerrit Pape <pape@smarden.org>
 
